Clicking go to shop opens in a new tab

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             });
 
                         document.getElementById('preview-address').innerHTML = shop.address
-                        document.getElementById('button-container').innerHTML = `<a href="${url}" style="display: inline-block; text-decoration: none; background-color: #007bff; color: white; padding: 10px 20px; border-radius: 5px; text-align: center;">Go to Shop</a>`
+                        document.getElementById('button-container').innerHTML = `<a href="${url}" target="_blank" style="display: inline-block; text-decoration: none; background-color: #007bff; color: white; padding: 10px 20px; border-radius: 5px; text-align: center;">Go to Shop</a>`
                     })
                     const tagsEl = document.createElement('div');
                     tagsEl.className = 'tags'
