Adds Poland and Sweden to filter list

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 case "Ireland":
                 case "Italy":
                 case "Netherlands":
+                case "Poland":
+                case "Sweden":
                     return true;
                 default:
                     return false;
@@ -211,6 +213,8 @@
                     <option value="Ireland">Ireland</option>
                     <option value="Italy">Italy</option>
                     <option value="Netherlands">Netherlands</option>
+                    <option value="Poland">Poland</option>
+                    <option value="Sweden">Sweden</option>
                 </select>
 
                 <label for="shopType-select">Shop Type:</label>
