Adds Canada filter option

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         <label for="country-select">Country:</label>
         <select id="country-select">
           <option value="">Any</option>
+          <option value="Canada">Canada</option>
           <option value="USA">USA</option>
           <option value="EU">--EU--</option>
           <option value="Finland">Finland</option>
