Adds South Korea

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
           <option value="Netherlands">Netherlands</option>
           <option value="Poland">Poland</option>
           <option value="Sweden">Sweden</option>
+          <option value="Asia">--Asia--</option>
+          <option value="South Korea">South Korea</option>
         </select>
 
         <label for="shopType-select">Shop Type:</label>
