--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
         <label for="country-select">Country:</label>
         <select id="country-select">
           <option value="">Any</option>
+          <option value="Canada">Canada</option>
           <option value="USA">USA</option>
           <option value="EU">--EU--</option>
           <option value="Finland">Finland</option>
@@ -225,6 +226,8 @@
           <option value="Netherlands">Netherlands</option>
           <option value="Poland">Poland</option>
           <option value="Sweden">Sweden</option>
+          <option value="Asia">--Asia--</option>
+          <option value="South Korea">South Korea</option>
         </select>
 
         <label for="shopType-select">Shop Type:</label>
